--- a/css/style.css
+++ b/css/style.css
@@ -427,7 +427,8 @@ h1 {
     margin: 2rem auto;
 }
 
-.random-btn {
+.random-btn,
+.retry-btn {
     display: block;
     margin: 3rem auto;
     padding: 0.8rem 2rem;
@@ -442,7 +443,8 @@ h1 {
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-.random-btn:hover {
+.random-btn:hover,
+.retry-btn:hover {
     background-color: #e09e00;
     transform: translateY(-2px);
 }
@@ -632,19 +634,13 @@ hr {
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
+.page-jyunishi #retryBtn {
+    margin: auto;
+    display: none;
+}
+
 #confirmBtn:hover {
     background-color: #e09e00;
-    transform: translateY(-2px);
-}
-
-#retryBtn {
-    background-color: #950303;
-    display: none;
-    margin: 1.5rem auto;
-}
-
-#retryBtn:hover {
-    background-color: #c9302c;
     transform: translateY(-2px);
 }
 
@@ -708,11 +704,16 @@ h1 {
 
 /* for kotowaza.html */
 .proverb-area {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 45vh;
     margin: 2rem 0;
     background-color: white;
     border: 2px solid #950303;
     padding: 2rem 1rem;
+    text-align: center;
 }
 
 .proverb-text {
@@ -720,7 +721,7 @@ h1 {
     font-size: 1.8rem;
     font-weight: 600;
     color: #950303;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .proverb-text ruby rt {
@@ -736,26 +737,6 @@ h1 {
     color: #302833;
     max-width: 80%;
     margin: 0 auto;
-}
-
-.retry-btn {
-    display: block;
-    margin: 2rem auto;
-    padding: 0.8rem 2rem;
-    font-family: "Kaisei Decol", serif;
-    font-size: 1.2rem;
-    font-weight: 500;
-    color: #fff;
-    background-color: #950303;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-}
-
-.retry-btn:hover {
-    background-color: #c9302c;
-    transform: translateY(-2px);
 }
 
 .kotowaza {
